--- a/index.html
+++ b/index.html
@@ -2,113 +2,213 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 <style>
-* {
+{
   box-sizing: border-box;
 }
-
-/* Create three equal columns that floats next to each other */
 .column {
   float: left;
-  width: 30%;
-  padding: 20px;
-  margin: 10px;
+  width: 33%;
+  padding: 1px;
+  margin: 1px;
 }
 
-/* Clear floats after the columns */
 .row:after {
   content: "";
   display: table;
   clear: both;
+}
+h1 {
+font-family: "Open Sans";
+}
+h2 {
+font-family: "Open Sans";
 }
 </style>
 </head>
 <body>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0&appId=791445867616482&autoLogAppEvents=1" nonce="qPWJBV6l"></script>
-
-<h1 style="text-align:center">Unilever Brands - GARM Misinformation and Social Issues</h1>
+<img src='zefr.png' width="100" style="float:left; margin:10px;" />
+<br>
+<h1 style="text-align:center">Unilever Report - Misinformation and Social Issues</h1>
+<br><br>
+<hr>
 <h2 style="text-align:center">TikTok</h2>
 
 <div class="row">
   <div class="column">
-    <blockquote class="tiktok-embed" data-video-id="7117216285418736902" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+    <blockquote class="tiktok-embed" data-video-id="7090721343783668997" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
   </div>
   <div class="column">
-    <blockquote class="tiktok-embed" data-video-id="6957513081090002182" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+    <blockquote class="tiktok-embed" data-video-id="7081241950258580741" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
   </div>
   <div class="column">
-    <blockquote class="tiktok-embed" data-video-id="7162582983831063813" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+    <blockquote class="tiktok-embed" data-video-id="7158844227068316974" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
   </div>
 </div> 
 <div class="row">
   <div class="column">
-    <blockquote class="tiktok-embed" data-video-id="6951097561801297157" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
-  </div>
-  <div class="column">
-    <blockquote class="tiktok-embed" data-video-id="7023917381911137542" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
-  </div>
-  <div class="column">
-    <blockquote class="tiktok-embed" data-video-id="7116214664136002858" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
-  </div>
-</div>
-<div class="row">
-  <div class="column">
-    <blockquote class="tiktok-embed" data-video-id="7081241950258580741" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+    <blockquote class="tiktok-embed" data-video-id="7158863365270424878" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
   </div>
   <div class="column">
     <blockquote class="tiktok-embed" data-video-id="7172974395848150315" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
   </div>
   <div class="column">
-    <blockquote class="tiktok-embed" data-video-id="6859526126218317062" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+    <blockquote class="tiktok-embed" data-video-id="7036547127958490414" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
   </div>
 </div>
+<div class="row">
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7158451302756879659" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7121175534804946181" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7117216285418736902" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+</div>
+<div class="row">
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7174573981511732526" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="6957513081090002182" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7086458457062149418" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+</div>
+<div class="row">
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="6859526126218317062" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7133243250093329710" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7023917381911137542" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+</div>
+<div class="row">
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7162582983831063813" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7116214664136002858" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7035978149917642031" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+</div>
+<div class="row">
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7117376783099497774" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7117700108178689322" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7120455424897387822" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+</div>
+<div class="row">
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7116317670349229355" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7117178489677139202" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7029556538792496385" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+</div>
+<div class="row">
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7143699056143895851" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7145558914648575275" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+  <div class="column">
+    <blockquote class="tiktok-embed" data-video-id="7143662214631771434" style="max-width: 605px;min-width: 325px;" > <section>   </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+  </div>
+</div>
+<hr>
 <h2 style="text-align:center">Meta</h2>
 <div class="row">
   <div class="column">
-	<div class="fb-post" data-href="https://www.facebook.com/unitedwithisrael/posts/5836273983072195" data-width="500" data-show-text="true">
+	<div class="fb-post" data-href="https://www.facebook.com/unitedwithisrael/posts/5836273983072195" data-width="450" data-show-text="true">
 	<blockquote cite="https://www.facebook.com/unitedwithisrael/posts/5836273983072195" class="fb-xfbml-parse-ignore"></blockquote></div>
   </div>
   <div class="column">
- 	<div class="fb-post" data-href="https://www.facebook.com/ExtremoMundial/posts/510504604446824" data-width="500" data-show-text="true">
+ 	<div class="fb-post" data-href="https://www.facebook.com/ExtremoMundial/posts/510504604446824" data-width="450" data-show-text="true">
 	<blockquote cite="https://www.facebook.com/ExtremoMundial/posts/510504604446824" class="fb-xfbml-parse-ignore"></blockquote></div>  </div>
   <div class="column">
-  	<div class="fb-post" data-href="https://www.facebook.com/Breitbart/posts/10169806593580354" data-width="500" data-show-text="true">
+  	<div class="fb-post" data-href="https://www.facebook.com/Breitbart/posts/10169806593580354" data-width="450" data-show-text="true">
 	<blockquote cite="https://www.facebook.com/Breitbart/posts/10169806593580354" class="fb-xfbml-parse-ignore"></blockquote></div>  </div>
 </div>
 <div class="row">
   <div class="column">
-	<div class="fb-post" data-href="https://www.facebook.com/newsmax/posts/10159375971967377" data-width="500" data-show-text="true">
+	<div class="fb-post" data-href="https://www.facebook.com/newsmax/posts/10159375971967377" data-width="450" data-show-text="true">
 	<blockquote cite="https://www.facebook.com/newsmax/posts/10159375971967377" class="fb-xfbml-parse-ignore"></blockquote></div>
   </div>
   <div class="column">
- 	<div class="fb-post" data-href="https://www.facebook.com/SeanHannity/posts/713414616905624" data-width="500" data-show-text="true">
+ 	<div class="fb-post" data-href="https://www.facebook.com/SeanHannity/posts/713414616905624" data-width="450" data-show-text="true">
 	<blockquote cite="https://www.facebook.com/SeanHannity/posts/713414616905624" class="fb-xfbml-parse-ignore"></blockquote></div>  </div>
   <div class="column">
-  	<div class="fb-post" data-href="https://www.facebook.com/Algemeiner/posts/10160648366593675" data-width="500" data-show-text="true">
+  	<div class="fb-post" data-href="https://www.facebook.com/Algemeiner/posts/10160648366593675" data-width="450" data-show-text="true">
 	<blockquote cite="https://www.facebook.com/Algemeiner/posts/10160648366593675" class="fb-xfbml-parse-ignore"></blockquote></div>  </div>
 </div>
+<div class="row">
+  <div class="column">
+	<div class="fb-post" data-href="https://www.facebook.com/Algemeiner/posts/10160790052048675" data-width="450" data-show-text="true">
+	<blockquote cite="https://www.facebook.com/Algemeiner/posts/10160790052048675" class="fb-xfbml-parse-ignore"></blockquote></div>
+  </div>
+  <div class="column">
+ 	<div class="fb-post" data-href="https://www.facebook.com/the.conservative2/posts/5781317211886416" data-width="450" data-show-text="true">
+	<blockquote cite="https://www.facebook.com/the.conservative2/posts/5781317211886416" class="fb-xfbml-parse-ignore"></blockquote></div>  </div>
+</div>
+<hr>
 <h2 style="text-align:center">YouTube</h2>
 <div class="row">
   <div class="column">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/she3yRp3dAI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="450" height="253" src="https://www.youtube.com/embed/she3yRp3dAI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="column">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/YO3Ud2wBQ-k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="450" height="253" src="https://www.youtube.com/embed/YO3Ud2wBQ-k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="column">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/df5GQxHpV4Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="450" height="253" src="https://www.youtube.com/embed/df5GQxHpV4Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </div>
 <div class="row">
   <div class="column">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/-Z2b6CCL5xo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="450" height="253" src="https://www.youtube.com/embed/0F-lQJ1xO2E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="column">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/aUO-VaAGdRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="450" height="253" src="https://www.youtube.com/embed/aUO-VaAGdRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="column">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/hM-KYfI62LM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="450" height="253" src="https://www.youtube.com/embed/G-lzFmHgoyE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</div>
+<div class="row">
+  <div class="column">
+    <iframe width="450"height="253" src="https://www.youtube.com/embed/-Z2b6CCL5xo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <div class="column">
+    <iframe width="450" height="253" src="https://www.youtube.com/embed/w39roeMwJRE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <div class="column">
+    <iframe width="450" height="253" src="https://www.youtube.com/embed/hM-KYfI62LM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</div>
+<div class="row">
+  <div class="column">
+    <iframe width="450" height="253" src="https://www.youtube.com/embed/suo6yxdJpcY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </div>
 </body>
